--- a/Index.html
+++ b/Index.html
@@ -98,31 +98,17 @@
             box-shadow: 0 0 4px 1px rgba(0, 0, 0, 0.08), 0 0 0 4px white, 2px 2px 10px rgba(0, 0, 0, 0.2), 0 0 4px 2px rgba(0, 0, 0, 0.4);
             display: inline-block;
             padding: 0.4rem 1rem;
-            text-decoration: none;
             text-align: center;
             color: black;
             width: 80%;
-            background: linear-gradient(to bottom, white 70%, rgba(0, 0, 0, 0.2));
+            background: linear-gradient(to bottom, rgb(243, 243, 243) 70%, rgba(0, 0, 0, 0.2));
             cursor: url("css/Wii Cursor.cur"), default;
-        }
- 
-        li:empty:after {
-            width: 100%;
-            height: 100%;
-            font-size: 2rem;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            opacity: 0.12;
-            content: "Wii";
-            font-weight: bold;
         }
         
         li img {
             width: 100%;
             height: 100%;
             object-fit: cover;
-            z-index: 0;
             object-position: center;
         }
 
@@ -140,9 +126,6 @@
 
         .footer {
             position: relative;
-            bottom: 0;
-            left: 0;
-            right: 0;
             background-image: url("media/Wii-Navigation.png");
             /* ^^^ why wont this show??? */
             background-size: cover;
@@ -152,17 +135,14 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            min-height: 100px;
         }
 
         input[type="date"] {
             padding: 12px 20px;
-            font-size: 18px;
-            border: 2px solid #333;
-            border-radius: 8px;
-            background-color: rgba(255, 255, 255, 0.9);
-            cursor: pointer;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+            font-family: 'Digital-7', monospace;
+            font-size: 21px;
+            border-radius: 1rem;
+            border-color: #adabab;
             cursor: url("css/Wii Cursor.cur"), default;
         }
     </style>
